--- a/Flashcard/Base.lproj/Main.storyboard
+++ b/Flashcard/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What's the capital of Australia?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDG-az-eAc">
-                                        <rect key="frame" x="-34" y="-15" width="370" height="239"/>
+                                        <rect key="frame" x="-34" y="-14" width="370" height="239"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.53239961260000002" green="1" blue="0.68060983880000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="26"/>
@@ -40,17 +40,29 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hio-4w-zEr">
-                                        <rect key="frame" x="248" y="160" width="54" height="51"/>
+                                        <rect key="frame" x="248" y="164" width="62" height="47"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="49"/>
                                         <state key="normal">
                                             <string key="title">✎
 LOWER RIGHT PENCIL
 Unicode: U+270E, UTF-8: E2 9C 8E</string>
-                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="black"/>
                                         </state>
                                         <connections>
                                             <segue destination="ZK5-1f-P2N" kind="presentation" identifier="EditSegue" id="ijo-ZO-Vfn"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7re-ep-i0O">
+                                        <rect key="frame" x="-9" y="-14" width="45" height="43"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                        <state key="normal" title="🅇">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didTapOnDelete:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ppL-Pr-pse"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -60,19 +72,8 @@ Unicode: U+270E, UTF-8: E2 9C 8E</string>
                                     <outletCollection property="gestureRecognizers" destination="xGy-yp-uet" appends="YES" id="1Zl-se-BoF"/>
                                 </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R2i-PK-K7O">
-                                <rect key="frame" x="56" y="643" width="302" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="25"/>
-                                <state key="normal" title="Canberra">
-                                    <color key="titleColor" red="0.53239961260000002" green="1" blue="0.68060983880000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="didTapBtnTwo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RnA-CA-CDR"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NmD-fK-4sL">
-                                <rect key="frame" x="56" y="718" width="302" height="50"/>
+                                <rect key="frame" x="56" y="720" width="302" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="25"/>
                                 <state key="normal" title="Sydney">
@@ -83,7 +84,7 @@ Unicode: U+270E, UTF-8: E2 9C 8E</string>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nz3-mm-2sX">
-                                <rect key="frame" x="56" y="567" width="302" height="50"/>
+                                <rect key="frame" x="56" y="556" width="302" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="25"/>
                                 <state key="normal" title="Melbourne">
@@ -94,7 +95,7 @@ Unicode: U+270E, UTF-8: E2 9C 8E</string>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UIU-7t-mEh">
-                                <rect key="frame" x="152" y="793" width="110" height="69"/>
+                                <rect key="frame" x="186" y="775" width="43" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <state key="normal" title="+">
@@ -102,6 +103,45 @@ Unicode: U+270E, UTF-8: E2 9C 8E</string>
                                 </state>
                                 <connections>
                                     <segue destination="ZK5-1f-P2N" kind="presentation" identifier="" id="QHb-HJ-zg0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qIy-ua-4hv">
+                                <rect key="frame" x="20" y="798" width="75" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <state key="normal" title="&lt;">
+                                    <color key="titleColor" red="0.53239961260000002" green="1" blue="0.68060983880000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" red="0.81452326340000003" green="0.98039215690000003" blue="0.84816405520000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapOnPrev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Aj-J7-4Gx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zVU-li-S0f">
+                                <rect key="frame" x="319" y="798" width="75" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <state key="normal" title="&gt;">
+                                    <color key="titleColor" red="0.53239961260000002" green="1" blue="0.68060983880000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" red="0.81452326340000003" green="0.98039215690000003" blue="0.84816405520000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapOnNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EQX-Ke-Xn0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R2i-PK-K7O">
+                                <rect key="frame" x="56" y="637" width="302" height="53"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="25"/>
+                                <state key="normal" title="Canberra">
+                                    <color key="titleColor" red="0.53239961260000002" green="1" blue="0.68060983880000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapBtnTwo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RnA-CA-CDR"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -115,6 +155,8 @@ Unicode: U+270E, UTF-8: E2 9C 8E</string>
                         <outlet property="btn3" destination="NmD-fK-4sL" id="OjP-wc-w50"/>
                         <outlet property="card" destination="eTV-1J-13c" id="gjV-Vq-TGp"/>
                         <outlet property="frontLabel" destination="tDG-az-eAc" id="JeS-7d-v94"/>
+                        <outlet property="nextButton" destination="zVU-li-S0f" id="Gqd-I1-g9T"/>
+                        <outlet property="prevButton" destination="qIy-ua-4hv" id="gdF-9h-Ghh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
